; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ext2/extr_inode.c_ext2_write_inode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ext2/extr_inode.c_ext2_write_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.writeback_control = type { i64 }

@WB_SYNC_ALL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2_write_inode(%struct.inode* %0, %struct.writeback_control* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.writeback_control*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.writeback_control* %1, %struct.writeback_control** %4, align 8
  %5 = load %struct.inode*, %struct.inode** %3, align 8
  %6 = load %struct.writeback_control*, %struct.writeback_control** %4, align 8
  %7 = getelementptr inbounds %struct.writeback_control, %struct.writeback_control* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @WB_SYNC_ALL, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @__ext2_write_inode(%struct.inode* %5, i32 %11)
  ret i32 %12
}

declare dso_local i32 @__ext2_write_inode(%struct.inode*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
